@@ -29,6 +29,7 @@ AllOverIt
   * Removed Guard.InvalidWhen - can equally use WhenNotNull() and related methods
   * Moved ILinqSpecification extensions to the AllOverIt.Patterns.Specification.Extensions namespace
   * Added IEnumerable extension HasDistinctGrouping()
+  * Added expression extension methods GetPropertyOrFieldExpressionUsingParameter() and GetParameterPropertyOrFieldExpression()
 
 AllOverIt.Assertion
   * Removed methods that asserted an enumerable was a concrete collection type and instead updated .NET Core 3.1
